Bug 383653 - Edit field doesn't get focus after windows appears - need to click into field
Summary: Edit field doesn't get focus after windows appears - need to click into field
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.37.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
: 384152 384738 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-08-18 00:37 UTC by Piotr Mierzwinski
Modified: 2017-09-15 11:44 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.38.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2017-08-18 00:37:02 UTC
Edit field to enter the password doesn't get focus after windows appears - need to click into field, what is a bit annoying. As far as I remember this doesn't happen in KF-5.36

The same situation (after update to KF-5.37) I met running webbrowser linked with KWallet, for example Opera.
Comment 1 Christoph Feck 2017-08-18 00:50:40 UTC
https://phabricator.kde.org/D7378
Comment 2 Piotr Mierzwinski 2017-08-18 00:54:55 UTC
Is it possible that this (very simple) patch will be applied in next version of KF?
Comment 3 Christoph Feck 2017-08-18 12:07:21 UTC
Git commit e72a8c2dad4dbce7972bba24631f8ad24e8fe990 by Christoph Feck.
Committed on 18/08/2017 at 12:05.
Pushed by cfeck into branch 'master'.

[KPasswordLineEdit] Set focus proxy to line edit
FIXED-IN: 5.38.0

Differential Revision: https://phabricator.kde.org/D7378

M  +1    -0    src/kpasswordlineedit.cpp

https://commits.kde.org/kwidgetsaddons/e72a8c2dad4dbce7972bba24631f8ad24e8fe990
Comment 4 Christoph Feck 2017-08-29 22:27:49 UTC
*** Bug 384152 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2017-09-15 11:44:27 UTC
*** Bug 384738 has been marked as a duplicate of this bug. ***