[KPasswordLineEdit] Set focus proxy to line edit

BUG: 383653
FIXED-IN: 5.38.0

Differential Revision: https://phabricator.kde.org/D7378